2005-11-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (compile_po_files): Handle the case when msgfmt
	is not found, print a warning and returning nothing, instead of
	failing later on.

2005-11-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (app): Add global app reference
	(Library.__init__): Add better error messages and insert
	$prefix/lib/pythonX.Y/site-packages into sys.path

2005-10-31  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/icon.py (IconEntry.update_background): Handle insensitive 
	widgets aswell, always use the current state instead of hard coding
	GTK_STATE_NORMAL.

2005-10-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gadgets.py:
	* kiwi/ui/widgets/proxy.py:
	Add two signals (color-changed and done) to FadeOut and move it out
	to gadgets.

2005-10-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/interfaces.py:
	* kiwi/proxies.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/spinbutton.py:
	Do validation in read, simplifies the interaction between the proxy 
	and the widgets.
	Add some basic documentation to the proxy/validation "interfaces".

2005-10-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	Kill WidgetMixin.update, move the check it did to the proxy itself.

2005-10-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (Entry.do_unrealize): 
	* kiwi/ui/widgets/spinbutton.py (SpinButton.do_unrealize): 
	Chain to parents realize so the parent gets a chance to
	free the relevent resources.

2005-10-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/list.py:
	* kiwi/ui/widgets/proxy.py: