@@ -98,7 +98,6 @@ class FadeOut(gobject.GObject):
         gobject.GObject.__init__(self)
         self._widget = widget
         self._background_timeout_id = -1
-        self._stop = False
         
     def _merge_colors(self, src_color, dst_color, steps=10):
         """
@@ -128,15 +127,10 @@ class FadeOut(gobject.GObject):
     # FIXME: When we can depend on 2.4
     #@delayed(COMPLAIN_DELAY)
     def start(self):
-        # If we didn't use a decorator we could remove this state and
-        # remove the timeout
-        if self._stop:
-            self._stop = False
-            return
-        
         # If we changed during the delay
         if self._background_timeout_id != -1:
-            return 
+            return
+        
         func = self._merge_colors(FadeOut.GOOD_COLOR,
                                   FadeOut.ERROR_COLOR).next
         self._background_timeout_id = (
@@ -144,10 +138,14 @@ class FadeOut(gobject.GObject):
     start = delayed(COMPLAIN_DELAY)(start)
     
     def stop(self):
+        """Stops the fadeout and restores the background color"""
+        
         if self._background_timeout_id != -1:
             gobject.source_remove(self._background_timeout_id)
             self._background_timeout_id = -1
         self._widget.update_background(gdk.color_parse(FadeOut.GOOD_COLOR))
-        self._stop = True
+
+        # Stop the decorator
+        self.start.stop()
         
 gobject.type_register(FadeOut)
